resolved CSS layout issues in header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,40 +1,54 @@
 html {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 body {
   font-family: Helvetica;
 }
 
-nav.header {
+.site-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 960px;
+}
+
+.header {
   display: flex;
   flex-direction: row;
+  align-items: center;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5rem;
   background-color: black;
+  width: 100%;
+}
+
+.header-contents {
+  /*display: flex;
+  flex-direction: row;
+  align-items: center;*/
+  max-width: 960px;
 }
 
 .logo {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
-  margin-left: 15%;
-  width: 2.5rem;
+  margin-left: 10%;
+  height: 1.5rem;
+  padding: .5rem;
 }
 
-li.header {
+span.header-contents {
   display: flex;
   align-items: center;
-  flex-grow: 3;
   color: white;
   margin: 1.125rem;
+  padding: .66rem .5rem;
 }
 
 .content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
 }
 
